Update fmt.Println message to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -180,6 +180,32 @@
             </div>
         </section>
 
+        <section class="container product-types" style="display:flex;gap:24px;flex-wrap:wrap;justify-content:center;margin-bottom:36px;">
+            <div class="product-card industrial" style="flex:1 1 320px;min-width:260px;max-width:420px;background:linear-gradient(135deg,#e3fbe3 60%,#c8f2c8 100%);border-radius:18px;box-shadow:0 4px 24px rgba(76,138,76,0.07);padding:28px 20px;text-align:center;">
+                <h3 style="color:#357a35;margin-top:0;">Промисловий варіант</h3>
+                <p style="font-size:1.1rem;">Готовий до встановлення одразу після доставки. Мінімальна партія — <b>10 шт</b>. Ідеально для ЖКГ, ОСББ, шкіл, парків, бізнес-центрів, громадських просторів.</p>
+                <ul style="text-align:left;max-width:320px;margin:18px auto 0 auto;">
+                    <li>Професійна збірка та перевірка</li>
+                    <li>Встановлення під ключ</li>
+                    <li>Гарантія на електроніку 5 років</li>
+                    <li style="color:#a00;font-size:0.98em;">Корпус та інші частини не підлягають гарантії</li>
+                </ul>
+                <p style="margin-top:18px;"><a class="btn" href="#contact">Замовити партію</a></p>
+            </div>
+            <div class="product-card civil" style="flex:1 1 320px;min-width:260px;max-width:420px;background:linear-gradient(135deg,#e3fbe3 60%,#c8f2c8 100%);border-radius:18px;box-shadow:0 4px 24px rgba(76,138,76,0.07);padding:28px 20px;text-align:center;">
+                <h3 style="color:#357a35;margin-top:0;">Цивільний (DIY) варіант</h3>
+                <p style="font-size:1.1rem;">Для фізичних осіб, сімей, дітей. Формат <b>ІКЕА</b>: набір деталей, інструкція, все для самостійного складання вдома. Чудова сімейна активність та подарунок!</p>
+                <ul style="text-align:left;max-width:320px;margin:18px auto 0 auto;">
+                    <li>Збирається власноруч за 30 хвилин</li>
+                    <li>Безпечні матеріали та прості інструменти</li>
+                    <li>Розвиває командну роботу та любов до природи</li>
+                    <li>Гарантія на електроніку 5 років</li>
+                    <li style="color:#a00;font-size:0.98em;">Корпус та інші частини не підлягають гарантії</li>
+                </ul>
+                <p style="margin-top:18px;"><a class="btn" href="#contact">Дізнатись більше</a></p>
+            </div>
+        </section>
+
         <section id="tips" class="container tips">
             <h2>Поради по годуванню</h2>
             <ul>
