--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
                     <li>Гарантія на електроніку 5 років</li>
                     <li style="color:#a00;font-size:0.98em;">Корпус та інші частини не підлягають гарантії</li>
                 </ul>
+                <div style="margin-top:16px; background:#f7fff7; border:1px solid #dff5df; padding:12px; border-radius:10px; max-width:340px; width:100%; text-align:left;">
+                    <strong style="color:#2d6f2d; display:block; margin-bottom:8px;">Оптові знижки</strong>
+                     <ul style="margin:0; padding-left:18px; color:#225522;">
+                        <li>При замовленні від 10 одиниць — знижка 1% на кожну одиницю</li>
+                        <li>При замовленні від 50 одиниць — знижка 5% на кожну одиницю</li>
+                        <li>При замовленні від 100 одиниць — знижка 10% на кожну одиницю</li>
+                    </ul>
+    </div>
                 <p style="margin-top:18px;"><a class="btn" href="#contact">Замовити партію</a></p>
             </div>
             <div class="product-card civil" style="flex:1 1 320px;min-width:260px;max-width:420px;background:linear-gradient(135deg,#e3fbe3 60%,#c8f2c8 100%);border-radius:18px;box-shadow:0 4px 24px rgba(76,138,76,0.07);padding:28px 20px;text-align:center;">
