--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
                 <div style="margin-top:16px; background:#f7fff7; border:1px solid #dff5df; padding:12px; border-radius:10px; max-width:340px; width:100%; text-align:left;">
                     <strong style="color:#2d6f2d; display:block; margin-bottom:8px;">Оптові знижки</strong>
                      <ul style="margin:0; padding-left:18px; color:#225522;">
-                        <li>При замовленні від 10 одиниць — знижка 1% на кожну одиницю</li>
-                        <li>При замовленні від 50 одиниць — знижка 5% на кожну одиницю</li>
-                        <li>При замовленні від 100 одиниць — знижка 10% на кожну одиницю</li>
+                        <li>При замовленні від 10+ одиниць — знижка 1% на кожну одиницю</li>
+                        <li>При замовленні від 50+ одиниць — знижка 5% на кожну одиницю</li>
+                        <li>При замовленні від 100+ одиниць — знижка 10% на кожну одиницю</li>
                     </ul>
     </div>
                 <p style="margin-top:18px;"><a class="btn" href="#contact">Замовити партію</a></p>
@@ -272,3 +272,4 @@
     </script>
 </body>
 </html>
+
