--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
         <section id="contact" class="container contact">
             <h2>Контакти</h2>
-            <p>Потрібні креслення, консультація чи партнерство? Звертайтесь до нашої команди: <a href="mailto:omgdenchik.da@gmail.com">omgdenchik.da@gmail.com</a></p>
+            <p>Потрібні креслення, консультація чи партнерство? Звертайтесь до нашої команди: <a href="mailto:omgdenchik.da@gmail.com" style="color: white; font-size: 12px; ">omgdenchik.da@gmail.com</a></p>
             <p>Ми відкриті до співпраці, нових ідей та пропозицій. Разом ми можемо зробити більше для природи та суспільства!</p>
         </section>
 
