--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
                 <p>Кожна годівниця проходить контроль якості та тестується на міцність. Ми дбаємо про те, щоб ваші пернаті гості були у безпеці, а ви — впевнені у надійності виробу.</p>
                 <p>Безпечна конструкція та матеріали — це запорука довгого життя годівниці та здоров'я птахів.</p>
             </article>
+            <article class="card">
+                <h3>Логіка роботи</h3>
+                <p></p>
+                <p></p>
+            </article>
         </section>
 
         <section id="benefit" class="container benefit center">
@@ -228,7 +233,7 @@
 
         <section id="contact" class="container contact">
             <h2>Контакти</h2>
-            <p>Потрібні креслення, консультація чи партнерство? Звертайтесь до нашої команди: <a href="mailto:omgdenchik.da@gmail.com" style="color: rgb(0, 0, 0); font-size: 12px; ">omgdenchik.da@gmail.com</a></p>
+            <p>Потрібні креслення, консультація чи партнерство? Звертайтесь до нашої команди: <a href="mailto:omgdenchik.da@gmail.com" style="color: rgb(0, 0, 0); font-size: 18px; ">omgdenchik.da@gmail.com</a></p>
             <p>Ми відкриті до співпраці, нових ідей та пропозицій. Разом ми можемо зробити більше для природи та суспільства!</p>
         </section>
 
