--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
             </article>
             <article class="card">
                 <h3>Логіка роботи</h3>
-                <p></p>
-                <p></p>
+                <p>Пристрій працює за простим алгоритмом.</p>
+                <p>Кожні 30 хвилин зчитується рівень освітлення. Якщо значення перевищує заданий поріг, дверцята відкриваються. Якщо рівень падає нижче порога, дверцята закриваються.</p>
+                <p>Вранці та ввечері при спрацюванні датчика світла система надсилає SMS на заданий номер телефону. Повідомлення містить дані про рівень заряду акумулятора, стан кормушки та рівень освітлення.</p>
             </article>
         </section>
 
